--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
+      <meta name="google-site-verification" content="-h0ERmveMXZXnyb-5qav6DtnnUU0n06o6cmYAmFnT54" />
       <title>Privacy Policy</title>
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
